tests/specs/ecosystem/kwhinnery/animals/0_0_14.test
kwhinnery/animals/0.0.14
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

<== TYPE CHECK FAILED ==
<-- stdout --
<
<-- stderr --
<error: Module not found "file://<tmpdir>/dist/animal.js".
<    at file://<tmpdir>/dist/mod.d.ts:1:15
